--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -48,11 +48,13 @@ pubs <- scholar::get_publications("5QzX_vUAAAAJ") %>%
   dplyr::arrange(desc(year))
 ```
 
-# Some stuff about me
+# About me
 
- * I poisoned myself doing research.
- * I was the first woman to win a Nobel prize
- * I was the first person and only woman to win a Nobel prize in two different sciences.
+I am an informal pre-doc at the Institute for Cogntive Neuroscience at HSE University.
+Currently, I am running an MEG project studying syntax processing and a mousetracking project studying processing of negated sentences.
+In my spare time, I am involved in several other mini-projects: a study on the role of phonemes in speech perception, development of a Python package to analyze frequency-tagging data, unsupervised classification of MEG data from the BIOMAG 2021 competition.
+I do my current best to work with computational reproducibility and open science practices in mind.
+Here and there I make small contributions to scientific open-source projects.
 
 # Education
 
