--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -52,6 +52,10 @@ pubs <- scholar::get_publications("5QzX_vUAAAAJ") %>%
 jobs.academic <- read_csv(
   here::here('data', 'jobs_academic.csv'),
   col_types = cols(.default = "c"))
+
+jobs.industry <- read_csv(
+  here::here('data', 'jobs_industry.csv'),
+  col_types = cols(.default = "c"))
 ```
 
 # About me
@@ -93,6 +97,17 @@ pubs %>%
 
 ```{r jobs-academic}
 jobs.academic %>% 
+  detailed_entries(
+    what = role,
+    when = glue("{start_date}--{end_date}"),
+    with = company,
+    where = where,
+    why = details)
+```
+## Non-academic jobs
+
+```{r jobs-industry}
+jobs.industry %>% 
   detailed_entries(
     what = role,
     when = glue("{start_date}--{end_date}"),
