--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -41,23 +41,6 @@ library(magrittr)
 education.data <- rorcid::orcid_educations("0000-0002-4606-4179")$`0000-0002-4606-4179`$`affiliation-group`$summaries %>%
   dplyr::bind_rows()
 
-# Publications from Google Scholar
-# copied from https://github.com/seabbs/cv/blob/master/cv/cv.Rmd#L31-L41
-pubs <- scholar::get_publications("5QzX_vUAAAAJ") %>% 
-  dplyr::mutate(
-    author = author %>% 
-      as.character %>% 
-      stringr::str_trim(),
-    journal = journal %>% 
-      replace(journal %in% "bioRxiv", "BioRxiv"), 
-    first_author = dplyr::case_when(
-      stringr::str_starts(author, "E Kalenkovich") ~ TRUE,
-      TRUE ~ FALSE),
-    preprint = dplyr::case_when(
-      journal %in% c("bioRxiv", "BioRxiv") ~ TRUE,
-      TRUE ~ FALSE)) %>% 
-  dplyr::arrange(desc(year))
-
 jobs.briefly <- read_csv(
   here::here('data', 'jobs_briefly.csv'),
   col_types = cols(.default = "c"))
@@ -81,8 +64,12 @@ be <- bibliography_entries(here::here('data', 'from-zotero.bib')) %>%
   ungroup %>%
   mutate(
     author = vitae:::obj_print_data.list_of_csl_names(author),
-    date_string = format(vitae:::vec_cast.Date.csl_dates(issued), '%B %Y')) %>%
-  {filter(., genre == 'Poster') ->> posters2}
+    date = vitae:::vec_cast.Date.csl_dates(issued),
+    date_string = format(date, '%B %Y'),
+    year = format(date, '%Y')) %>%
+  rename(journal = `container-title`) %T>%
+  {filter(., genre == 'Poster') ->> posters2} %T>%
+  {filter(., type == 'article-journal') ->> articles.published}
 ```
 
 # Education
@@ -124,13 +111,13 @@ skills %>%
 # Publications
 
 ```{r show-all-pubs}
-pubs %>% 
+articles.published %>%
+  as_tibble %>%
   detailed_entries(
     what = title,
     when = as.character(year),
     with = author,
-    where = journal, 
-    .protect = TRUE
+    where = journal
   )
 ```
 # Jobs
