make education/experience/skills fit on first page

--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -92,9 +92,7 @@ education.data %>%
   )
 ```
 
-# Experience (briefly)
-
-More details in the "Jobs" section below.
+# Experience briefly (see "Jobs" for details)
 
 ```{r jobs-brief}
 jobs.briefly %>% 
