--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -301,6 +301,9 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \hypertarget{teaching}{%
 \section{Teaching}\label{teaching}}
 
+\hypertarget{university-courses}{%
+\subsection{University courses}\label{university-courses}}
+
 \begin{cventries}
     \cventry{Psychology Department}{Python for Data Extraction and Data Mining}{HSE University, Moscow}{April-June, 2020}{\begin{cvitems}
 \item Introduction to Python for first-year bachelor students. The course blended a MOOC with 5 remote discussion/practice sessions. I led the sessions for four groups of students out of seven.
@@ -313,6 +316,18 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \end{cvitems}}
     \cventry{Master's program 'Cognitive science and technologies'}{Digital Signal Processing}{HSE University, Moscow}{January-March, 2017}{\begin{cvitems}
 \item Basics of digital signal processing: Fourier, linear filters, random processes. I led approximately seven discussion/practice sessions.
+\end{cvitems}}
+\end{cventries}
+
+\hypertarget{mini-courses}{%
+\subsection{Mini courses}\label{mini-courses}}
+
+\begin{cventries}
+    \cventry{Applied Cogntive Science Summer School}{Reproducible Resarch}{HSE University, Moscow}{November, 3-5, 2020}{\begin{cvitems}
+\item Three 2-hour-long workshops on reproducible code using git, reproducible software environment using conda, reproducible articles using renv, r-markdown, and papaja.
+\end{cvitems}}
+    \cventry{Applied Cogntive Science Summer School}{Component Analysis and Dimensionality Reduction for M/EEG data}{HSE University, Moscow}{June, 15-18, 2019}{\begin{cvitems}
+\item Three 2-hour-long workshops taught together with Egor Levchenko. Intuitive visual explanation of covariance matrices, whitening and decorrelation methods in general. A short detour into ICA. Examples of applications from authors' research: inter-subject correlation of MEG data acquired during naturalistic stimuli viewing and frequency-tagging analysis of MEG data acquired during listening to speech.
 \end{cvitems}}
 \end{cventries}
 
