--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -331,4 +331,28 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \end{cvitems}}
 \end{cventries}
 
+\hypertarget{extracurricular-activity}{%
+\section{Extracurricular activity}\label{extracurricular-activity}}
+
+\begin{cventries}
+    \cventry{2020-present}{ReproducibiliTea Journal Club organizer}{}{}{\begin{cvitems}
+\item Along with two other organizers, we run the Moscow chapter of the ReproducibiliTea Journal Club initiative. In addition to discussing reproducibility- and replicability-related papers, we find speakers to give presentations or workshops on the topics voted for by the community.
+\end{cvitems}}
+    \cventry{2018-present}{Selective adaptation study of phoneme-sized segments in speech perception}{}{}{\begin{cvitems}
+\item Phonemes are to speech approximately as vowels and consonants are to phonetic writing. They are one of the basic units in linguistics but the psycholinguistic experimental evidence for them is shaky due to the hard-to-control confounds. By combining controls employed independently in previous studies we want to test the influence of phonemes/allophones on speech perception properly. Our Stage 1 Registered Report has been rejected at QJEP after a revision. We are now working on a revised version that will incorporate the feedback we received. Work with Ekaterina Stupina."
+\end{cvitems}}
+    \cventry{2021-present}{Python package freqtag for frequency-tagging data analysis}{}{}{\begin{cvitems}
+\item A frequency-tagging paradigm uses repetitive periodic stimulation to probe for the effects of whatever properties of the stimuli repeated at a certain frequency. This paradigm brings shorter sessions and high signal-to-noise ratio. The analysis of such data, however, is all over the place as every researcher starts more or less from scratch. Together with Dominik Welke we are writing a Python package that should both facilitate and unify such analyses.
+\end{cvitems}}
+    \cventry{2020}{Frequency-tagging analysis tutorial for mne-python}{}{}{\begin{cvitems}
+\item As a starting point for the freqtag package described above, Dominik Welke and I (mostly Dominik) wrote a tutorial showing how a very basic frequency-tagging dataset can be analyzed. \textbackslash href\{https://mne.tools/stable/auto\_tutorials/time-freq/50\_ssvep.html\}\{Link.\}
+\end{cvitems}}
+    \cventry{2021-present}{Tutorial on writing computationally reproducible workflows for M/EEG data analysis}{}{}{\begin{cvitems}
+\item Out of the frustration brought by trying to reproduce (get the same results from the same data) both our own and some public M/EEG results, Egor Levchenko and I decided to write a tutorial on a way an M/EEG data analysis can be done reproducibly. It involves using package management systems (conda, renv), workflow management systems (Snakemake, nipype) and literate programming (r-markdown, codebraid)
+\end{cvitems}}
+    \cventry{2019-present}{BIOMAG 2022 data analysis competition}{}{}{\begin{cvitems}
+\item Our goal is to classify unlabelled MEG resting state data of depressed/healty participants under the influence of ketamine/placebo. Together with Egor Levchenko and Kirill Stepanovskikh.
+\end{cvitems}}
+\end{cventries}
+
 \end{document}
