--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -32,7 +32,7 @@
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 
-\definecolor{awesome}{HTML}{000000}
+\definecolor{awesome}{HTML}{009ACD}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
