updated syntag paper status

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -128,7 +128,7 @@ open-source projects.}
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {June 2021}
+  {August 2021}
     {Evgenii Kalenkovich~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -202,7 +202,7 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \subsection{In progress}\label{in-progress}}
 
 \begin{cventries}
-    \cventry{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{}{Stage 1 of Registered Report received In-Principle Acceptance}{}\vspace{-4.0mm}
+    \cventry{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{}{Stage 2 of Registered Report submitted}{}\vspace{-4.0mm}
     \cventry{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{Phonemes in Speech Perception: Selective Adaptation to Missing Phonemes}{}{currently being revised}{}\vspace{-4.0mm}
 \end{cventries}
 
