--- a/data/from-zotero.bib
+++ b/data/from-zotero.bib
@@ -13,8 +13,8 @@
   shorttitle = {Frequency {{Tagging}} of {{Syntax}} or {{Words}}},
   author = {Kalenkovich, Evgenii and Shestakova, Anna and Kazanina, Nina},
   year = {TBD},
-  howpublished = {Stage 1 of Registered Report received In-Principle Acceptance},
-  type = {Stage 1 of Registered Report received In-Principle Acceptance}
+  howpublished = {Stage 2 of Registered Report submitted},
+  type = {Stage 2 of Registered Report submitted}
 }
 
 @unpublished{kalenkovichPhonemesSpeechPerceptionTBD,
