update syntag paper status
The change in the EEGManyLabs paper is due to unicode characters.

--- a/data/from-zotero.bib
+++ b/data/from-zotero.bib
@@ -9,12 +9,12 @@
 }
 
 @unpublished{kalenkovichFrequencyTaggingSyntacticTBD,
+  type = {Accepted at {{Cortex}}},
   title = {Frequency {{Tagging}} of {{Syntactic Structure}} or {{Lexical Properties}}; {{A Registered MEG Study}}},
   shorttitle = {Frequency {{Tagging}} of {{Syntax}} or {{Words}}},
   author = {Kalenkovich, Evgenii and Shestakova, Anna and Kazanina, Nina},
   year = {TBD},
-  howpublished = {Stage 2 of Registered Report submitted},
-  type = {Stage 2 of Registered Report submitted}
+  copyright = {All rights reserved}
 }
 
 @unpublished{kalenkovichPhonemesSpeechPerceptionTBD,
