--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -128,7 +128,7 @@ open-source projects.}
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {August 2021}
+  {October 2021}
     {Evgenii Kalenkovich~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -194,7 +194,7 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \subsection{Published}\label{published}}
 
 \begin{cventries}
-    \cventry{Yuri G. Pavlov, Nika Adamian, Stefan Appelhoff, Mahnaz Arvaneh, Christopher S. Y. Benwell, Christian Beste, Amy R. Bland, Daniel E. Bradford, Florian Bublatzky, Niko A. Busch, Peter E. Clayson, Damian Cruse, Artur Czeszumski, Anna Dreber, Guillaume Dumas, Benedikt Ehinger, Ganis Giorgio, Xun He, JosГ© A. Hinojosa, Christoph Huber-Huber, Michael Inzlicht, Bradley N. Jack, Magnus Johannesson, Rhiannon Jones,\textbf{ Evgenii Kalenkovich}, Laura Kaltwasser, Hamid Karimi-Rouzbahani, Andreas Keil, Peter KГ¶nig, Layla Kouara, Louisa Kulke, Cecile D. Ladouceur, Nicolas Langer, Heinrich R. Liesefeld, David Luque, Annmarie MacNamara, Liad Mudrik, Muthuraman Muthuraman, Lauren B. Neal, Gustav Nilsonne, Guiomar Niso, Sebastian Ocklenburg, Robert Oostenveld, Cyril R. Pernet, Gilles Pourtois, Manuela Ruzzoli, Sarah M. Sass, Alexandre Schaefer, Magdalena Senderecka, Joel S. Snyder, Christian K. Tamnes, Emmanuelle Tognoli, van Marieke K. Vugt, Edelyn Verona, Robin Vloeberghs, Dominik Welke, Jan R. Wessel, Ilya Zakharov, Faisal Mushtaq}{\#EEGManyLabs: Investigating the Replicability of Influential EEG Experiments}{Cortex}{2021}{}\vspace{-4.0mm}
+    \cventry{Yuri G. Pavlov, Nika Adamian, Stefan Appelhoff, Mahnaz Arvaneh, Christopher S. Y. Benwell, Christian Beste, Amy R. Bland, Daniel E. Bradford, Florian Bublatzky, Niko A. Busch, Peter E. Clayson, Damian Cruse, Artur Czeszumski, Anna Dreber, Guillaume Dumas, Benedikt Ehinger, Ganis Giorgio, Xun He, JosÃ© A. Hinojosa, Christoph Huber-Huber, Michael Inzlicht, Bradley N. Jack, Magnus Johannesson, Rhiannon Jones,\textbf{ Evgenii Kalenkovich}, Laura Kaltwasser, Hamid Karimi-Rouzbahani, Andreas Keil, Peter KÃ¶nig, Layla Kouara, Louisa Kulke, Cecile D. Ladouceur, Nicolas Langer, Heinrich R. Liesefeld, David Luque, Annmarie MacNamara, Liad Mudrik, Muthuraman Muthuraman, Lauren B. Neal, Gustav Nilsonne, Guiomar Niso, Sebastian Ocklenburg, Robert Oostenveld, Cyril R. Pernet, Gilles Pourtois, Manuela Ruzzoli, Sarah M. Sass, Alexandre Schaefer, Magdalena Senderecka, Joel S. Snyder, Christian K. Tamnes, Emmanuelle Tognoli, van Marieke K. Vugt, Edelyn Verona, Robin Vloeberghs, Dominik Welke, Jan R. Wessel, Ilya Zakharov, Faisal Mushtaq}{\#EEGManyLabs: Investigating the Replicability of Influential EEG Experiments}{Cortex}{2021}{}\vspace{-4.0mm}
     \cventry{Nikita A. Novikov, Yulia M. Nurislamova, Natalia A. Zhozhikashvili,\textbf{ Evgenii E. Kalenkovich}, Anna A. Lapina, Boris V. Chernyshev}{Slow and Fast Responses: Two Mechanisms of Trial Outcome Processing Revealed by EEG Oscillations}{Frontiers in Human Neuroscience}{2017}{}\vspace{-4.0mm}
 \end{cventries}
 
@@ -202,7 +202,7 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \subsection{In progress}\label{in-progress}}
 
 \begin{cventries}
-    \cventry{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{}{Stage 2 of Registered Report submitted}{}\vspace{-4.0mm}
+    \cventry{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{}{Accepted at {{Cortex}}}{}\vspace{-4.0mm}
     \cventry{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{Phonemes in Speech Perception: Selective Adaptation to Missing Phonemes}{}{currently being revised}{}\vspace{-4.0mm}
 \end{cventries}
 
