insert missing word in the lab name
Forgot to actually write "laboratory".

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -225,7 +225,7 @@ Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
     \cventry{Research Assistant}{Centre for Bioelectric Interfaces, HSE University}{Moscow}{July 2017--March 2018}{\begin{cvitems}
 \item Developing real-time EEG source reconstruction and 3D visualization software (PyQt, mne-python, OpenGL)
 \end{cvitems}}
-    \cventry{Research Programmer}{Cognitive Psychophysiology, HSE University}{Moscow}{April 2015--April 2016}{\begin{cvitems}
+    \cventry{Research Programmer}{Cognitive Psychophysiology Laboratory, HSE University}{Moscow}{April 2015--April 2016}{\begin{cvitems}
 \item Writing Matlab scripts for EEG time-frequency analysis
 \end{cvitems}}
 \end{cventries}
