--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -210,19 +210,19 @@ details)}\label{experience-briefly-see-jobs-for-details}}
 \subsection{Academic}\label{academic}}
 
 \begin{cventries}
-    \cventry{Junior Research Fellow}{Institute for Cognitive Neuroscience, HSE University}{Moscow}{January 2019--present}{\begin{cvitems}
+    \cventry{Junior Research Fellow}{Institute for Cognitive Neuroscience, HSE University, https://neuro.hse.ru/}{Moscow}{January 2019--present}{\begin{cvitems}
 \item Running psycho/neurolinguistics projects under the supervision of Dr. Nina Kazanina
 \end{cvitems}}
-    \cventry{Research Assistant}{Institute for Cognitive Neuroscience, HSE University}{Moscow}{July 2018--December}{\begin{cvitems}
+    \cventry{Research Assistant}{Institute for Cognitive Neuroscience, HSE University, https://neuro.hse.ru/}{Moscow}{July 2018--December}{\begin{cvitems}
 \item Running psycho/neurolinguistics projects under the supervision of Dr. Nina Kazanina
 \end{cvitems}}
-    \cventry{Not Officiall Employed}{Institute for Cognitive Neuroscience, HSE University}{Moscow}{January 2018--June 2018}{\begin{cvitems}
+    \cventry{Not Officiall Employed}{Institute for Cognitive Neuroscience, HSE University, https://neuro.hse.ru/}{Moscow}{January 2018--June 2018}{\begin{cvitems}
 \item Running psycho/neurolinguistics projects under the supervision of Dr. Nina Kazanina
 \end{cvitems}}
-    \cventry{Research Assistant}{Centre for Bioelectric Interfaces, HSE University}{Moscow}{July 2017--March 2018}{\begin{cvitems}
+    \cventry{Research Assistant}{Centre for Bioelectric Interfaces, HSE University, https://bioelectric.hse.ru/}{Moscow}{July 2017--March 2018}{\begin{cvitems}
 \item Developing real-time EEG source reconstruction and 3D visualization software (PyQt, mne-python, OpenGL)
 \end{cvitems}}
-    \cventry{Research Programmer}{Cognitive Psychophysiology Laboratory, HSE University}{Moscow}{April 2015--April 2016}{\begin{cvitems}
+    \cventry{Research Programmer}{Cognitive Psychophysiology Laboratory, HSE University, https://social.hse.ru/psy/cognpp/}{Moscow}{April 2015--April 2016}{\begin{cvitems}
 \item Writing Matlab scripts for EEG time-frequency analysis
 \end{cvitems}}
 \end{cventries}
@@ -231,13 +231,13 @@ details)}\label{experience-briefly-see-jobs-for-details}}
 \subsection{Non-academic}\label{non-academic}}
 
 \begin{cventries}
-    \cventry{Chief Analyst}{Risk Management Division, OTP Bank}{Moscow}{January 2014--July 2014}{\begin{cvitems}
+    \cventry{Chief Analyst}{Risk Management Division, OTP Bank, https://www.otpbank.ru/}{Moscow}{January 2014--July 2014}{\begin{cvitems}
 \item Debt collection analysis and modelling
 \end{cvitems}}
-    \cventry{Chief Analyst}{Credit Scoring Unit, Russian Standard Bank}{Moscow}{July 2013--December 2013}{\begin{cvitems}
+    \cventry{Chief Analyst}{Credit Scoring Unit, Russian Standard Bank, https://www.rsb.ru}{Moscow}{July 2013--December 2013}{\begin{cvitems}
 \item Credit scoring models for potential clients, credit risk analysis of current clients
 \end{cvitems}}
-    \cventry{Lead Analyst}{Credit Scoring Unit, Russian Standard Bank}{Moscow}{July 2011--June 2013}{\begin{cvitems}
+    \cventry{Lead Analyst}{Credit Scoring Unit, Russian Standard Bank, https://www.rsb.ru/}{Moscow}{July 2011--June 2013}{\begin{cvitems}
 \item Credit risk analysis of current clients
 \end{cvitems}}
 \end{cventries}
