--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -177,9 +177,9 @@ details)}\label{experience-briefly-see-jobs-for-details}}
 \section{Education}\label{education}}
 
 \begin{cventries}
-    \cventry{MSc in Cognitive Science}{HSE University, School of Psychology}{Moscow}{2015 - 2017}{}\vspace{-4.0mm}
-    \cventry{MSc in Financial and Actuarial Mathematics}{Charles University, Faculty of Mathematics and Physics}{Prague}{2008 - 2010}{}\vspace{-4.0mm}
-    \cventry{BSc in Financial Mathematics}{Charles University, Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
+    \cventry{MSc in Cognitive Science, ``Solving the EEG and MEG Inverse Problem Using Physiologically Plausible Priors''}{HSE University, School of Psychology}{Moscow}{2015 - 2017}{}\vspace{-4.0mm}
+    \cventry{MSc in Financial and Actuarial Mathematics, ``Sharing of probabilistic information of Bayesian agents''}{Charles University, Faculty of Mathematics and Physics}{Prague}{2008 - 2010}{}\vspace{-4.0mm}
+    \cventry{BSc in Financial Mathematics, ``Methodical Collection of Solved Examples from Probability Theory I (in Czech)''}{Charles University, Faculty of Mathematics and Physics}{Prague}{2005 - 2008}{}\vspace{-4.0mm}
 \end{cventries}
 
 \pagebreak
