--- a/data/from-zotero.bib
+++ b/data/from-zotero.bib
@@ -1,20 +1,18 @@
-
 @unpublished{kalenkovichCompetitionLocalPriming2019,
+  type = {Poster},
   title = {Competition between Local Priming and Global Outcome in Processing of Negatives},
   author = {Kalenkovich, Evgenii and Darley, Emily J. and Kent, Christopher and Kazanina, Nina},
   date = {2019-09},
   eventtitle = {{{AMLaP}} 2019},
-  type = {Poster},
   venue = {{Moscow}}
 }
 
-@unpublished{kalenkovichFrequencyTaggingSyntacticTBD,
-  type = {Accepted at {{Cortex}}},
+@article{kalenkovichFrequencyTaggingSyntactic2021,
   title = {Frequency {{Tagging}} of {{Syntactic Structure}} or {{Lexical Properties}}; {{A Registered MEG Study}}},
   shorttitle = {Frequency {{Tagging}} of {{Syntax}} or {{Words}}},
   author = {Kalenkovich, Evgenii and Shestakova, Anna and Kazanina, Nina},
-  year = {TBD},
-  copyright = {All rights reserved}
+  date = {2021-11},
+  journaltitle = {Cortex}
 }
 
 @unpublished{kalenkovichPhonemesSpeechPerceptionTBD,
@@ -22,35 +20,34 @@
   shorttitle = {Phonemes in {{Speech Perception}}},
   author = {Kalenkovich, Evgenii and Stupina, Ekaterina},
   year = {TBD},
-  howpublished = {currently being revised},
-  type = {currently being revised}
+  howpublished = {currently being revised}
 }
 
 @unpublished{kalenkovichPsychologicalMechanismsContributing2020,
+  type = {Poster},
   title = {Psychological Mechanisms Contributing to the Effort in Negation Processing},
   author = {Kalenkovich, Evgenii and Darley, Emily J. and Kent, Christopher and Kazanina, Nina},
   date = {2020-09},
   url = {https://amlap2020.github.io/a/240.pdf},
   eventtitle = {{{AMLaP}} 2020},
-  type = {Poster},
   venue = {{Online}}
 }
 
 @unpublished{kalenkovichSyntacticVsLexical2020,
+  type = {Poster},
   title = {Syntactic vs. {{Lexical Effects}} in {{Syntactic Frequency Tagging}}},
   author = {Kalenkovich, Evgenii and Kazanina, Nina},
   date = {2020-10},
   eventtitle = {{{SNL}} 2020},
-  type = {Poster},
   venue = {{Online}}
 }
 
 @unpublished{kalenkovichWeNeedPhonemes2019,
+  type = {Poster},
   title = {Do We Need Phonemes in Speech Perception? {{An}} Auditory Selective Adaptation Study},
   author = {Kalenkovich, Evgenii and Stupina, Ekaterina},
   date = {2019-09},
   eventtitle = {{{AMLaP}} 2019},
-  type = {Poster},
   venue = {{Moscow}}
 }
 
@@ -72,7 +69,8 @@
 @article{pavlovEEGManyLabsInvestigatingReplicability2021,
   title = {\#{{EEGManyLabs}}: {{Investigating}} the {{Replicability}} of {{Influential EEG Experiments}}},
   shorttitle = {\#{{EEGManyLabs}}},
-  author = {Pavlov, Yuri G. and Adamian, Nika and Appelhoff, Stefan and Arvaneh, Mahnaz and Benwell, Christopher S.Y. and Beste, Christian and Bland, Amy R. and Bradford, Daniel E. and Bublatzky, Florian and Busch, Niko A. and Clayson, Peter E. and Cruse, Damian and Czeszumski, Artur and Dreber, Anna and Dumas, Guillaume and Ehinger, Benedikt and Giorgio, Ganis and He, Xun and Hinojosa, José A. and Huber-Huber, Christoph and Inzlicht, Michael and Jack, Bradley N. and Johannesson, Magnus and Jones, Rhiannon and Kalenkovich, Evgenii and Kaltwasser, Laura and Karimi-Rouzbahani, Hamid and Keil, Andreas and König, Peter and Kouara, Layla and Kulke, Louisa and Ladouceur, Cecile D. and Langer, Nicolas and Liesefeld, Heinrich R. and Luque, David and MacNamara, Annmarie and Mudrik, Liad and Muthuraman, Muthuraman and Neal, Lauren B. and Nilsonne, Gustav and Niso, Guiomar and Ocklenburg, Sebastian and Oostenveld, Robert and Pernet, Cyril R. and Pourtois, Gilles and Ruzzoli, Manuela and Sass, Sarah M. and Schaefer, Alexandre and Senderecka, Magdalena and Snyder, Joel S. and Tamnes, Christian K. and Tognoli, Emmanuelle and van Vugt, Marieke K. and Verona, Edelyn and Vloeberghs, Robin and Welke, Dominik and Wessel, Jan R. and Zakharov, Ilya and Mushtaq, Faisal},
+  author = {Pavlov, Yuri G. and ... and Mushtaq, Faisal},
+  options = {useprefix=true},
   date = {2021-04},
   journaltitle = {Cortex},
   shortjournal = {Cortex},
@@ -81,8 +79,5 @@
   doi = {10.1016/j.cortex.2021.03.013},
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0010945221001106},
   urldate = {2021-04-06},
-  langid = {english},
-  options = {useprefix=true}
+  langid = {english}
 }
-
-
