add snakemake preprint

--- a/data/from-zotero.bib
+++ b/data/from-zotero.bib
@@ -33,6 +33,17 @@
   venue = {{Online}}
 }
 
+@report{kalenkovichReproducibleMEEGData2021,
+  type = {preprint},
+  title = {A {{Reproducible MEEG Data Analysis Workflow}} with Conda, {{Snakemake}}, and {{R Markdown}}},
+  author = {Kalenkovich, Evgenii and Levchenko, Egor},
+  date = {2021-09-21},
+  institution = {{PsyArXiv}},
+  doi = {10.31234/osf.io/3k8nt},
+  url = {https://osf.io/3k8nt},
+  urldate = {2023-02-14}
+}
+
 @unpublished{kalenkovichSyntacticVsLexical2020,
   type = {Poster},
   title = {Syntactic vs. {{Lexical Effects}} in {{Syntactic Frequency Tagging}}},
